CLI templates updated to support .NET 8 Preview 7

--- a/src/MauiTemplatesCLI/MauiAppX/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppX/MauiApp.1.csproj
@@ -180,14 +180,14 @@
         <!--#endif-->
         <!--#if (AddFoldablePackage)-->
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="8.0.0-preview.6.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#else-->
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="7.0.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMapsPackage)-->
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.0-preview.6.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#else-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.*" />
         <!--#endif-->
@@ -198,11 +198,11 @@
         <!--#if (Net7OrLater)-->
         <!--#if (Net8)-->
         <!--#if (Hybrid || Razor)-->
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.0-preview.6.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.6.*" />
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.6.*" />
-        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.6.*" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.7.*" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#else-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
         <!--#endif-->
