Templates updated to support .NET 8 RC1

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
@@ -16,7 +16,7 @@
 
     <ItemGroup>
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-preview.7.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.1.*" />
         <!--#elif (Net7)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
         <!--#else-->
