--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -235,11 +235,11 @@
     <!--#endif-->
     <!--#if (Net7OrLater)-->
     <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.7.*" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.1.*" Condition="'$(Configuration)' == 'Debug'" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
     <!--#else-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" Condition="'$(Configuration)' == 'Debug'" />
     <!--#endif-->
     <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="5.3.*" />
