--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <!--#if (Net8)-->
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-*" />
     <!--#elif (Net7)-->
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
     <!--#else-->
