Introduced NuGet CPM

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
@@ -15,12 +15,22 @@
     </ItemGroup>
 
     <ItemGroup>
+        <!--#if (CentralPkgMgmt)-->
+        <!--#if (Net8)-->
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+        <!--#elif (Net7)-->
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+        <!--#else-->
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+        <!--#endif-->
+        <!--#else-->
         <!--#if (Net8)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-*" />
         <!--#elif (Net7)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.*" />
+        <!--#endif-->
         <!--#endif-->
     </ItemGroup>
 </Project>
