--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -4,6 +4,7 @@
 <!--#else-->
 <Project Sdk="Microsoft.NET.Sdk">
 <!--#endif-->
+
     <PropertyGroup>
         <!--#if (AllPlatforms)-->
         <TargetFrameworks>MAUI_TFM-android</TargetFrameworks>
@@ -145,9 +146,42 @@
     </ItemGroup>
 
     <!--#endif-->
-    <!--#if (Net8 || AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
+    <!--#if (PackageRef)-->
     <ItemGroup>
     <!--#endif-->
+        <!--#if (CentralPkgMgmt)-->
+        <!--#if (Net8)-->
+        <!--#if (UseMauiCore)-->
+        <PackageReference Include="Microsoft.Maui.Core" />
+        <!--#elif (UseMauiEssentials)-->
+        <PackageReference Include="Microsoft.Maui.Essentials" />
+        <!--#else-->
+        <!--#if (UseRazorSdk)-->
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" />
+        <!--#endif-->
+        <PackageReference Include="Microsoft.Maui.Controls" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+        <!--#endif-->
+        <!--#endif-->
+        <!--#if (Net7OrLater)-->
+        <!--#if (AddToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui" />
+        <!--#endif-->
+        <!--#if (AddMarkupPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" />
+        <!--#endif-->
+        <!--#else-->
+        <!--#if (AddToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui" />
+        <!--#endif-->
+        <!--#if (AddMarkupPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" />
+        <!--#endif-->
+        <!--#endif-->
+        <!--#if (AddMvvmToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Mvvm" />
+        <!--#endif-->
+        <!--#else-->
         <!--#if (Net8)-->
         <!--#if (UseMauiCore)-->
         <PackageReference Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
@@ -163,23 +197,24 @@
         <!--#endif-->
         <!--#if (Net7OrLater)-->
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="6.*"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="6.*" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*" />
         <!--#endif-->
         <!--#else-->
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.*"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.*" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.*"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.*"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.*" />
         <!--#endif-->
-    <!--#if (Net8 || AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
+        <!--#endif-->
+    <!--#if (PackageRef)-->
     </ItemGroup>
 
     <!--#endif-->
