--- a/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
+++ b/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
@@ -19,7 +19,7 @@
     <ProjectGuid>{A007B1D4-37EB-457E-B195-5A30D4B8671E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MauiTemplates</RootNamespace>
+    <RootNamespace>VijayAnand.MauiTemplates</RootNamespace>
     <AssemblyName>VijayAnand.MauiTemplates</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
