--- a/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppFS/Directory.Packages.props
@@ -13,7 +13,7 @@
         <!--#endif-->
         <!--#if (Hybrid)-->
         <!--#if (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.2.23480.2" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
         <!--#elif (Net7)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="7.0.13" />
         <!--#else-->
@@ -28,7 +28,7 @@
         <!--#if (Hybrid)-->
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-rc.2.23479.6" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#else-->
@@ -38,7 +38,7 @@
         <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.0" />
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.1" />
         <!--#endif-->
         <!--#if (AddMediaPackage)-->
         <PackageVersion Include="Fabulous.MauiControls.MediaElement" Version="2.0.0" />
